WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116876
r150199
is very wrong
https://bugs.webkit.org/show_bug.cgi?id=116876
Summary
r150199 is very wrong
Mark Hahnenberg
Reported
2013-05-28 11:41:20 PDT
http://trac.webkit.org/changeset/150199
was a result of some mis-read code. We weren't protecting the context, we were protecting the underlying JSValueRef. D'oh!
Attachments
Patch
(2.19 KB, patch)
2013-05-28 11:52 PDT
,
Mark Hahnenberg
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Hahnenberg
Comment 1
2013-05-28 11:52:36 PDT
Created
attachment 203072
[details]
Patch
Mark Hahnenberg
Comment 2
2013-05-28 14:18:32 PDT
Committed
r150831
: <
http://trac.webkit.org/changeset/150831
>
Mark Hahnenberg
Comment 3
2013-05-28 14:20:48 PDT
<
rdar://problem/14004998
>
Geoffrey Garen
Comment 4
2013-05-29 15:00:31 PDT
Eep!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug