r150199 is very wrong https://bugs.webkit.org/show_bug.cgi?id=116876

JSValue needs to protect its internal JSValueRef.

Reviewed by Darin Adler.

* API/JSValue.mm:
(-[JSValue initWithValue:inContext:]):
(-[JSValue dealloc]):
* API/tests/testapi.mm: Added a simple test to make sure that we protect the
underlying JavaScript value across garbage collections.


Canonical link: https://commits.webkit.org/135181@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150831 268f45cc-cd09-0410-ab3c-d52691b4dbfc